--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,72 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@misc{zhang2024entropyregularized,
+      title={Entropy-regularized Diffusion Policy with Q-Ensembles for Offline Reinforcement Learning}, 
+      author={Ruoqi Zhang and Ziwei Luo and Jens Sjölund and Thomas B. Schön and Per Mattsson},
+      year={2024},
+      eprint={2402.04080},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+  selected = {true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{ZHANG-Aiding,
+  title = {Aiding reinforcement learning for set point control},
+  journal = {IFAC-PapersOnLine},
+  volume = {56},
+  number = {2},
+  pages = {2437-2443},
+  year = {2023},
+  note = {22nd IFAC World Congress, Yokohama, Japan},
+  issn = {2405-8963},
+  doi = {https://doi.org/10.1016/j.ifacol.2023.10.1220},
+  url = {https://www.sciencedirect.com/science/article/pii/S2405896323016245},
+  author = {Ruoqi Zhang and Per Mattsson and Torbjörn Wigren},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{Zhang-observer,
+  author       = {Ruoqi Zhang and
+                  Per Mattsson and
+                  Torbj{\"{o}}rn Wigren},
+  title        = {Observer-Feedback-Feedforward Controller Structures in Reinforcement
+                  Learning},
+  journal = {IFAC-PapersOnLine},
+  volume = {56},
+  number = {2},
+  pages = {2437-2443},
+  year = {2023},
+  note = {22nd IFAC World Congress, Yokohama, Japan},
+  selected = {true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{Zhang-Robust,
+  author       = {Ruoqi Zhang and
+                  Per Mattsson and
+                  Torbj{\"{o}}rn Wigren},
+  title        = {Robust nonlinear set-point control with reinforcement learning},
+  booktitle    = {American Control Conference, {ACC} 2023, San Diego, CA, USA, May 31
+                  - June 2, 2023},
+  pages        = {84--91},
+  publisher    = {{IEEE}},
+  year         = {2023},
+  selected = {true}
+
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{Zhang-ActorFree,
+  author       = {Ruoqi Zhang and
+                  Jens Sj{\"{o}}lund},
+  title        = {Risk-sensitive Actor-free Policy via Convex Optimisation},
+  booktitle    = {Proceedings of the {IJCAI-23} Joint Workshop on Artificial Intelligence
+                  Safety and Safe Reinforcement Learning ,
+                  Macau, China, August 21-22, 2023},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3505},
+  publisher    = {CEUR-WS.org},
+  year         = {2023},
+  url          = {https://ceur-ws.org/Vol-3505/paper\_19.pdf},
+  timestamp    = {Fri, 08 Dec 2023 14:24:28 +0100},
+  selected = {true}
 }
