add publication images

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,18 +3,20 @@
 
 @misc{zhang2024entropyregularized,
       title={Entropy-regularized Diffusion Policy with Q-Ensembles for Offline Reinforcement Learning}, 
+      abbr={qen-diffusion},
       author={Ruoqi Zhang and Ziwei Luo and Jens Sjölund and Thomas B. Schön and Per Mattsson},
       year={2024},
       eprint={2402.04080},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
-  selected = {true}
+      selected = {true}
 }
 
 
 @article{ZHANG-Aiding,
   title = {Aiding reinforcement learning for set point control},
   journal = {IFAC-PapersOnLine},
+      abbr={p-controller},
   volume = {56},
   number = {2},
   pages = {2437-2443},
@@ -32,6 +34,7 @@
                   Torbj{\"{o}}rn Wigren},
   title        = {Observer-Feedback-Feedforward Controller Structures in Reinforcement
                   Learning},
+      abbr={observerFF},
   journal = {IFAC-PapersOnLine},
   volume = {56},
   number = {2},
@@ -45,6 +48,7 @@
   author       = {Ruoqi Zhang and
                   Per Mattsson and
                   Torbj{\"{o}}rn Wigren},
+      abbr={robust-PIME},
   title        = {Robust nonlinear set-point control with reinforcement learning},
   booktitle    = {American Control Conference, {ACC} 2023, San Diego, CA, USA, May 31
                   - June 2, 2023},
@@ -62,6 +66,7 @@
   booktitle    = {Proceedings of the {IJCAI-23} Joint Workshop on Artificial Intelligence
                   Safety and Safe Reinforcement Learning ,
                   Macau, China, August 21-22, 2023},
+      abbr={actor-free-cvx},
   series       = {{CEUR} Workshop Proceedings},
   volume       = {3505},
   publisher    = {CEUR-WS.org},
