--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,34 @@
 ---
 ---
 
+@article{zhang2025consistency,
+  title={Real-Time Diffusion Policies for Games: Enhancing Consistency Policies with Q-Ensembles},
+      abbr={consistency},
+  author={Zhang, Ruoqi and Luo, Ziwei and Sj{\"o}lund, Jens and Mattsson, Per and Gissl{\'e}n, Linus and Sestini, Alessandro},
+  journal={arXiv preprint arXiv:2503.16978},
+  year={2025},
+  selected = {true}
+}
+
 @misc{zhang2024entropyregularized,
       title={Entropy-regularized Diffusion Policy with Q-Ensembles for Offline Reinforcement Learning}, 
       abbr={qen-diffusion},
       author={Ruoqi Zhang and Ziwei Luo and Jens Sjölund and Thomas B. Schön and Per Mattsson},
-      year={2024},
-      eprint={2402.04080},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      selected = {true}
+  booktitle    = {Conference on Neural Information Processing Systems, {Neurips} 2024, Vancouver, Canada, Dec 10 - 15, 2024},
+  year         = {2024},
+  selected = {true}
+}
+
+
+@article{Zhang-Safeimprovement,
+  title={Safe Output Feedback Improvement with Baselines},
+  author={Zhang, Ruoqi and Mattsson, Per and Zachariah, Dave},
+      abbr={safe-policy-improvement},
+  booktitle    = {Conference on Decision and Control, {CDC} 2024, Milano, Italy, Dec 16
+                  - 19, 2024},
+  publisher    = {{IEEE}},
+  year         = {2024},
+  selected = {true}
 }
 
 
