fixed the error that conferene name not shown

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,25 +10,25 @@
   selected = {true}
 }
 
-@misc{zhang2024entropyregularized,
-      title={Entropy-regularized Diffusion Policy with Q-Ensembles for Offline Reinforcement Learning}, 
+@inproceedings{entropyzhang,
+ author = {Zhang, Ruoqi and Luo, Ziwei and Sj\"{o}lund, Jens and Sch\"{o}n, Thomas B. and Mattsson, Per},
       abbr={qen-diffusion},
-      author={Ruoqi Zhang and Ziwei Luo and Jens Sjölund and Thomas B. Schön and Per Mattsson},
-  booktitle    = {Conference on Neural Information Processing Systems, {Neurips} 2024, Vancouver, Canada, Dec 10 - 15, 2024},
-  year         = {2024},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
+ pages = {98871--98897},
+ publisher = {Curran Associates, Inc.},
+ title = {Entropy-regularized Diffusion Policy with Q-Ensembles for Offline Reinforcement Learning},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/b319c0e8092ba726cb22e718d7d9a95e-Paper-Conference.pdf},
+ volume = {37},
+ year = {2024},
   selected = {true}
 }
 
-
-@article{Zhang-Safeimprovement,
+@article{zhang2023safe,
   title={Safe Output Feedback Improvement with Baselines},
   author={Zhang, Ruoqi and Mattsson, Per and Zachariah, Dave},
-      abbr={safe-policy-improvement},
-  booktitle    = {Conference on Decision and Control, {CDC} 2024, Milano, Italy, Dec 16
+      abbr={Conference on Decision and Control, {CDC} 2024, Milano, Italy, Dec 16
                   - 19, 2024},
-  publisher    = {{IEEE}},
-  year         = {2024},
-  selected = {true}
 }
 
 
