update cog acc news and safe-img

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   title={Real-Time Diffusion Policies for Games: Enhancing Consistency Policies with Q-Ensembles},
       abbr={consistency},
   author={Zhang, Ruoqi and Luo, Ziwei and Sj{\"o}lund, Jens and Mattsson, Per and Gissl{\'e}n, Linus and Sestini, Alessandro},
-  journal={arXiv preprint arXiv:2503.16978},
+  journal={2025 IEEE Conference on Games},
   year={2025},
   selected = {true}
 }
@@ -29,6 +29,8 @@
   author={Zhang, Ruoqi and Mattsson, Per and Zachariah, Dave},
       abbr={Conference on Decision and Control, {CDC} 2024, Milano, Italy, Dec 16
                   - 19, 2024},
+  selected = {true},
+      abbr={safe-policy-improvement},
 }
 
 
@@ -45,6 +47,7 @@
   doi = {https://doi.org/10.1016/j.ifacol.2023.10.1220},
   url = {https://www.sciencedirect.com/science/article/pii/S2405896323016245},
   author = {Ruoqi Zhang and Per Mattsson and Torbjörn Wigren},
+  selected = {true}
 }
 
 @article{Zhang-observer,
