--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   selected = {true}
 }
 
+
 @inproceedings{entropyzhang,
  author = {Zhang, Ruoqi and Luo, Ziwei and Sj\"{o}lund, Jens and Sch\"{o}n, Thomas B. and Mattsson, Per},
       abbr={qen-diffusion},
@@ -31,6 +32,7 @@
                   - 19, 2024},
   selected = {true},
       abbr={safe-policy-improvement},
+ year = {2024},
 }
 
 
